--- a/templates/index.html
+++ b/templates/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Get real-time weather updates for any city, state, country, or local area. Simple, fast, and reliable weather forecasts at your fingertips." />
     <title>{{ title }}</title>
     <link rel="stylesheet" href="{{ url_for('static', filename = 'style.css') }}">
 </head>
@@ -30,5 +31,11 @@
             </div>
         </div>
     </main>
+
+    <div class="note" style="color:white;">
+        <h2>Note</h2>
+        <p><i>*This app may not display accurate information or any data at all for remote or less accessible locations.</i></p>
+    </div>
+
 </body>
 </html>
